# DID-NEAR-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md  aliases.js  build.sh  index.html  search-index.js  settings.html  source-files.js  test.sh  testnet.md
DID_NEAR_rust/: all.html  index.html  sidebar-items.js  struct.DID.html
implementors/borsh/de/: trait.BorshDeserialize.js
implementors/borsh/ser/: trait.BorshSerialize.js
implementors/core/default/: trait.Default.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: basic.rs  lib.rs  tests.rs
src/DID_NEAR_rust/: basic.rs.html  lib.rs.html
